- Experimental termination proofs by measure and by order. Triggered if
  the option --experimental is set.
- Order relations on orders are not anymore called <0x, <=0x etc, but simply
  <, <= etc.

# Focalize 0.9.0
################
- Update to Caml 4.02.0
- Update to Coq 8.4pl4
- New contruct "final let" to prevent redefinition by inheritance
- Script to transform FocDoc to HTML (fcd2html.sh)
- Emacs mode (pretty basic)
- Deep rewriting of dependencies computation code to fully compute *once* for
  all the possible backends (OCaml, Coq)
- Fixed code in dependencies computation.
- Uniformization of names and code generation schemes between OCaml and Coq.
- Lighter generated code (removed useless records and few other things)
- Interface .mli file generated for OCaml code output
- Ambiguous <-> now detected
- Records available (not yet handled by Zenon)
- Various cleanup
- Building the compiler is lighter
- Installation issues solved
* Zenon
  - String syntax
  - Numerous bug fixed
  - Installation issues solved
  - Zenon is now in a separate GIT repository
- Numerous bug fixed in both FoCaLiZe and Zenon (5, 6, 8, 13, 14, 18, 19, 25,
  26, 27, 29, 31, 32, 42, 45, 46, 47, 49, 50, 53, 55, 56, 58, 59, 60, 61, 62,
  64, 65, 66, 67)
- Other things we don't remember :S


# Focalize 0.8.0
################
- Update to Caml 4.0
- Update to Coq 8.4, compatibility with older versions up to 8.1.
- Foreign languages reserved keywords renammed on the fly to prevent
  conflicts.
- Zenon really smarter (induction via by type).
- Integration of Focalizetest
- No more Caml & Coq included in the distribution.
- Configuration & build stuff revised and simplified.
- Handling of weakly polymorphic type variable (ML _'a).
- Fixed order of -I options sent to Coq.
- More theorems in the standard library to deal with equality and
  comparisons on int's.
- Replacement of "assumed" proofs by real Coq proofs in the standard
  library.
- Tutorial on proofs.